overflow bug fixed

--- a/app/design/frontend/otentika/view/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/otentika/view/Magento_Catalog/web/css/source/_module.less
@@ -857,12 +857,9 @@
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     /*Otentika*/
-    html {
-        overflow-x: hidden;
-    }
         
     .catalog-category-view{
-    
+        overflow-x: hidden;
         & .page-main{
             margin: 0;
             padding: 0;
